# lsd_slam

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md  Rakefile  conanfile.py  fips.yml  hardcopy.0  wercker.yml
.rake/: benchmark.rb  build.rb  build_tasks.rb  cmake.rb  dependencies.rb  docker.rb  path.rb  tests.rb
.rb/: conan.rb
cmake/: BuildG2O.cmake  BuildG3Log.cmake  BuildPangolin.cmake  G3Log_neuter_semversioning.patch  Pangolin_squelch_error_1280.patch
doc/: .gitignore  Makefile  README.md  architecture.rst  conf.py  index.rst
doc/uml/: slamsystem.uml
fips-configs/: linux-make-unittest.yml  lsd-slam-linux-make-unittest.yml
lib/: CMakeLists.txt  SlamSystem.cpp  SlamSystem.h
lib/App/: App.cpp  App.h  G3LogSinks.h  InputThread.cpp  InputThread.h  g3logger.cpp  g3logger.h
lib/DataStructures/: CurrentKeyFrame.h  Frame.cpp  Frame.h  FrameData.cpp  FrameData.h  FrameData_impl.h  FrameMemory.cpp  FrameMemory.h  FramePoseStruct.cpp  FramePoseStruct.h  ImageSet.cpp  ImageSet.h  KeyFrame.cpp  KeyFrame.h
lib/DepthEstimation/: DepthMap.cpp  DepthMap.h  DepthMapDebugImages.cpp  DepthMapDebugImages.h  DepthMapPixelHypothesis.cpp  DepthMapPixelHypothesis.h
lib/GlobalMapping/: FabMap.cpp  FabMap.h  KeyFrameGraph.cpp  KeyFrameGraph.h  TrackableKeyFrameSearch.cpp  TrackableKeyFrameSearch.h  g2oTypeSim3Sophus.h
lib/IOWrapper/: GUIIOWrapper.h  ImageDisplay.h  Output3DWrapper.h  OutputIOWrapper.h
lib/IOWrapper/ROS/: ROSImageStreamThread.cpp  ROSImageStreamThread.h  ROSOutput3DWrapper.cpp  ROSOutput3DWrapper.h
lib/SlamSystem/: ConstraintSearchThread.cpp  ConstraintSearchThread.h  MappingThread.cpp  MappingThread.h  OptimizationThread.cpp  OptimizationThread.h  TrackingThread.cpp  TrackingThread.h
lib/Tracking/: Relocalizer.cpp  Relocalizer.h  SE3Tracker.cpp  SE3Tracker.h  SE3Tracker_NEON.cpp  SE3Tracker_SSE.cpp  Sim3Tracker.cpp  Sim3Tracker.h  TrackingReference.cpp  TrackingReference.h  TrackingReference_impl.h
lib/util/: Camera.h  Configuration.cpp  Configuration.h  DataSource.h  DenseDepthTrackerSettings.h  FileUtils.cpp  FileUtils.h  OpenCVDefines.h  SophusUtil.h  ThreadMutexObject.h  Undistorter.h  globalFuncs.cpp  globalFuncs.h  matrix.hpp  settings.cpp  settings.h
lib/viewer/: KeyFrameDisplay.cpp  KeyFrameDisplay.h  KeyFrameGraphDisplay.cpp  KeyFrameGraphDisplay.h  PointCloudViewer.cpp  PointCloudViewer.h
test/testdata/: README.md  base64_impl.h  make_testdata.py  test_testimages.cpp  testimages.cpp  testimages.h  testimages_data.cpp
test/unit/: CMakeLists.txt  base64.cpp  data_images.cpp  data_images.h  test_Frame.cpp  test_FrameData.cpp  test_main.cpp  test_matrix.cpp
tools/: CMakeLists.txt  LSD.cpp  LSD.h  LSD_GUI.cpp  LSD_GUI.h  ParseArgs.cpp  ParseArgs.h  viewer.cpp
tools/LSD/: InputThread.cpp  InputThread.h
tools/LSD_GUI/: GUI.cpp  GuiThread.cpp  GuiThread.h
tools/LSD_GUI/Pangolin_IOWrapper/: PangolinGUIIOWrapper.cpp  PangolinGUIIOWrapper.h  PangolinOutput3DWrapper.cpp  PangolinOutput3DWrapper.h  PangolinOutputIOWrapper.h
